2002-10-04  Andras Varga

	* error handling changed from simulation.ok() to exceptions.

2002-05-04  ------ omnetpp-2.2 released ------

2002-01-13  Andras Varga

	* Graceful handling of SIGTERM and SIGINT signals: calls finish()
        for current simulation and exits. Works on Unix only (Win32 doesn't
        support SIGTERM and SIGINT, among others). Based on suggestion and
        patch from Michele Baresi.

2000-06-06  Andras Varga

	* ------ omnetpp-2.1 released ------

	* Borland C++ support removed: I deleted the project files
	(*.ide). I added equivalent Makefile.bc files (generated from the
	BC IDE), but they are completely unsupported at the moment. If
	there's interest, it's possible that later I'll add makefiles for
	the free command-line bc5.5 compiler.


	* ------ omnetpp-2.0p1 released ------

	* ------ omnetpp-2.0 released ------

	* heap.cc, operator new fixed: when out of memory, it doesn't
	return NULL but calls exit(1). (According to the ISO standard, op
	new should throw an exception when out of memory. Unfortunately,
	exceptions are incompatible with the coroutine library's
	setjmp/longjmp magic, so OMNeT++ doesn't use exceptions at all.)

	HEAP.CC TO BE TESTED!!!

2000-05-10  Andras Varga

	* ------ omnetpp-2.0b5 released ------

	* ------ omnetpp-2.0b4 released ------

	* [Cmdenv]/extra-stack= option added, it specifies (in bytes) how
	much extra stack each activity() module needs when executing under
	Cmdenv.  This used to be hardcoded (8192), now users can fine-tune
	it.

2000-05-07  Andras Varga

       * Makefile.vc improvements from Balazs Kelemen

2000-04-10  Andrea Varga

	* changes to enable linking a Windows DLL from the library

	* memoryIsLow() reorganized; cosmetic changes on heap.cc

	* adjustments because of TOmnetApp constructor changes

	* added cmdenvDummy()/envirDummy(): functions which can/should be
	called from Envir in order to force the linker to include the